--- a/doc/man7/provider-keymgmt.pod
+++ b/doc/man7/provider-keymgmt.pod
@@ -436,6 +436,25 @@ its argument I<mdname>.  This signifies that no digest has to be specified
 with the corresponding signature operation, but may be specified as an
 option.
 
+=item "ri-type" (B<OSSL_PKEY_PARAM_CMS_RI_TYPE>) <UTF8 string>
+
+The value should be the CMS RecipientInfo type for the given key, for example
+CMS_RECIPINFO_KEM or CMS_RECIPINFO_AGREE.
+
+CMS will query this parameter first to determine the RecipientInfo type.  If
+this parameter is not filled in, CMS will check for known key types and map
+them to the appropriate RecipientInfo type. Otherwise, CMS will default to
+using CMS_RECIPINFO_TRANS.
+
+=item "kemri-kdf-alg" (B<OSSL_PKEY_PARAM_CMS_KEMRI_KDF_ALGORITHM>) <UTF8 string>
+
+The value should be the default KDF for this key it supports the KEMRecipientInfo
+(CMS_RECIPINFO_KEM) type.
+
+Any KDF that takes B<OSSL_KDF_PARAM_KEY> and B<OSSL_KDF_PARAM_INFO> parameters
+and is otherwise fully defined by its name or OID can be used, for example
+B<HKDF-SHA256>.
+
 =back
 
 The OpenSSL FIPS provider also supports the following parameters:
